add Strategy implementation intro

--- a/2018-PetiteMigration/macros.tex
+++ b/2018-PetiteMigration/macros.tex
@@ -36,8 +36,6 @@
 
 \newcommand{\bvc}[1]{\paragraphDesc{blue}{#1}}
 
-
-
 \graphicspath{{figures/}}
 %%% 
 
@@ -67,7 +65,7 @@
 \newcommand{\ie}{\emph{i.e.,}\xspace}
 \newcommand{\etal}{\emph{et al.,}\xspace}
 \newcommand{\ct}[1]{{\textsf{#1}}\xspace}
-
+\newcommand{\etc}[1]{\textit{etc.}}
 
 \newenvironment{code}
     {\begin{alltt}\sffamily}
