--- a/2018-PetiteMigration/references.bib
+++ b/2018-PetiteMigration/references.bib
@@ -270,3 +270,18 @@
 	month = may,
 	year = {2012},
 }
+
+
+@inproceedings{joorabchi2012reverse,
+	title = {Reverse {Engineering} {iOS} {Mobile} {Applications}},
+	isbn = {978-0-7695-4891-3 978-1-4673-4536-1},
+	url = {http://ieeexplore.ieee.org/document/6385113/},
+	doi = {10.1109/WCRE.2012.27},
+	language = {en},
+	urldate = {2018-06-22},
+	publisher = {IEEE},
+	author = {Joorabchi, Mona Erfani and Mesbah, Ali},
+	month = oct,
+	year = {2012},
+	pages = {177--186}
+}
