--- a/2018-RevueDeLitterature/macros.tex
+++ b/2018-RevueDeLitterature/macros.tex
@@ -7,9 +7,14 @@
     % \marginpar{\fbox{\bfseries\sffamily#1}}
    }
    \newcommand{\cvsversion}{\emph{\scriptsize$-$Id: macros.tex,v 1.1.1.1 2007/02/28 13:43:36 bergel Exp $-$}}
+   \newcommand{\paragraphDesc}[2]{
+    \textcolor{#1}{#2}
+   }
+   
   }
   {\newcommand{\bnote}[2]{}
    \newcommand{\cvsversion}{}
+   \newcommand{\paragraphDesc}[2]{}
   } 
 
 
@@ -25,6 +30,11 @@
 \newcommand{\md}[1]{\bnote{MD}{#1}}
 \newcommand{\jr}[1]{\bnote{JRe}{#1}}
 \newcommand{\lf}[1]{\bnote{Luc}{#1}}
+\newcommand{\na}[1]{\bnote{Nic}{#1}}
+\newcommand{\an}[1]{\bnote{Anne}{#1}}
+\newcommand{\bv}[1]{\bnote{Benoit}{#1}}
+
+\newcommand{\bvc}[1]{\paragraphDesc{blue}{#1}}
 
 \graphicspath{{figures/}}
 %%% 
@@ -55,7 +65,7 @@
 \newcommand{\ie}{\emph{i.e.,}\xspace}
 \newcommand{\etal}{\emph{et al.,}\xspace}
 \newcommand{\ct}[1]{{\textsf{#1}}\xspace}
-
+\newcommand{\etc}[1]{\textit{etc.}}
 
 \newenvironment{code}
     {\begin{alltt}\sffamily}
