--- a/2018-RevueDeLitterature/references.bib
+++ b/2018-RevueDeLitterature/references.bib
@@ -199,6 +199,7 @@
 	author = {Gotti, Zineb and Mbarki, Samir},
 	year = {2016},
 	pages = {210--219},
+  booktitle={ICSOFT-EA},
 }
 
 @inproceedings{MemonWCRE2003,
@@ -237,4 +238,48 @@
   booktitle={EESSMOD MoDELS},
   pages={49--54},
   year={2013}
+}
+
+
+@article{memon2007eventflow,
+	title = {An event-flow model of {GUI}-based applications for testing},
+	volume = {17},
+	abstract = {Graphical user interfaces (GUIs) are by far the most popular means used to interact with today’s software. The functional correctness of a GUI is required to ensure the safety, robustness and usability of an entire software system. GUI testing techniques used in practice are resource intensive; model-based automated techniques are rarely employed. A key reason for the reluctance in the adoption of model-based solutions proposed by researchers is their limited applicability; moreover, the models are expensive to create. Over the past few years, the present author has been developing different models for various aspects of GUI testing. This paper consolidates all of the models into one scalable event-ﬂow model and outlines algorithms to semi-automatically reverse-engineer the model from an implementation. Earlier work on model-based test-case generation, test-oracle creation, coverage evaluation, and regression testing is recast in terms of this model by deﬁning event-space exploration strategies (ESESs) and creating an end-to-end GUI testing process. Three such ESESs are described: for checking the event-ﬂow model, test-case generation, and testoracle creation. Two demonstrational scenarios show the application of the model and the three ESESs for experimentation and application in GUI testing. Copyright c 2007 John Wiley \& Sons, Ltd.},
+	language = {en},
+	number = {3},
+	urldate = {2018-07-04},
+	journal = {Software Testing, Verification and Reliability},
+	author = {Memon, Atif M.},
+	month = sep,
+	year = {2007},
+	pages = {137--157},
+}
+
+@inproceedings{joorabchi2012reverse,
+  title={Reverse engineering iOS mobile applications},
+  author={Joorabchi, Mona Erfani and Mesbah, Ali},
+  booktitle={Reverse engineering (wcre), 2012 19th working conference on},
+  pages={177--186},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{amalfitano2012using,
+  title={Using GUI ripping for automated testing of Android applications},
+  author={Amalfitano, Domenico and Fasolino, Anna Rita and Tramontana, Porfirio and De Carmine, Salvatore and Memon, Atif M},
+  booktitle={Proceedings of the 27th IEEE/ACM International Conference on Automated Software Engineering},
+  pages={258--261},
+  year={2012},
+  organization={ACM}
+}
+
+@article{mesbah2012crawling,
+  title={Crawling Ajax-based web applications through dynamic analysis of user interface state changes},
+  author={Mesbah, Ali and Van Deursen, Arie and Lenselink, Stefan},
+  journal={ACM Transactions on the Web (TWEB)},
+  volume={6},
+  number={1},
+  pages={3},
+  year={2012},
+  publisher={ACM}
 }
